fix npe & artist playlist name